# photo-diary

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  biome.json  committed.toml  index.html  justfile  lefthook.yml  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  stryker.config.json  tailwind.config.ts  taplo.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.stryker.config.ts
.cargo/: mutants.toml
.claude/: launch.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
crates/photo-diary-core/: Cargo.toml
crates/photo-diary-core/src/: db.rs  dto.rs  error.rs  exif.rs  lib.rs  library.rs  model.rs  orient.rs  scan.rs  thumbnail.rs  transcode.rs  views.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md
e2e/: global-setup.ts  smoke.spec.ts
scripts/: mutation-rust-diff.mjs  mutation-ts-diff.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  env.ts  i18n.d.ts  i18n.test.tsx  i18n.ts  library-context.tsx  providers.tsx  queries.test.tsx  queries.ts  router.tsx  theme.test.ts  theme.ts  today.ts  ui-store.test.ts  ui-store.ts  use-add-photos.ts
src/data/mock/: MockPhotoLibrary.contract.test.ts  MockPhotoLibrary.ts  fixtures.ts
src/data/tauri/: TauriPhotoLibrary.test.ts  TauriPhotoLibrary.ts  commands.ts
src/domain/: calendar.test.ts  calendar.ts  heat-level.ts  heatmap.test.ts  heatmap.ts  models.ts  ports.ts  star.ts  tokens.test.ts  tokens.ts
src/features/calendar/: CalendarView.tsx  MonthGrid.tsx  YearHeatmap.a11y.test.tsx  YearHeatmap.tsx  heat.test.ts  heat.ts
src/features/highlights/: HighlightsView.tsx
src/features/import/: ImportOverlay.tsx
src/features/lightbox/: Lightbox.a11y.test.tsx  Lightbox.test.tsx  Lightbox.tsx
src/features/onboarding/: EmptyState.tsx
src/features/shell/: AppShell.tsx  SearchBar.tsx  Sidebar.tsx  Toast.tsx  TopBar.tsx
src/features/timeline/: DayCard.a11y.test.tsx  DayCard.test.tsx  DayCard.tsx  DayDetailView.tsx  DayHeader.tsx  DigestCard.test.tsx  DigestCard.tsx  EventCard.test.tsx  EventCard.tsx  NoteEditor.test.tsx  NoteEditor.tsx  TimelineView.tsx
src/features/tokens/: TokensView.tsx
src/lib/: cn.test.ts  cn.ts  datetime.test.ts  datetime.ts  format.test.ts  format.ts
src/locales/: en.json  ja.json
src/test/: polyfills.ts  port-contract.ts  setup.ts  utils.tsx  vitest.d.ts
src/ui/: Button.tsx  ErrorPanel.tsx  PhotoTile.a11y.test.tsx  PhotoTile.test.tsx  PhotoTile.tsx  Segmented.tsx  icons.tsx
