[package]
name = "photo-diary"
version = "0.1.0"
edition = "2021"
description = "photo-diary desktop shell (Tauri v2). UI from ../dist, real work in photo-diary-core."
publish = false

[lib]
name = "photo_diary_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
photo-diary-core = { path = "../crates/photo-diary-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Serde-contract tests pin the exact JSON keys the frontend reads for ImportDto and the
# import-progress event payload. Already locked transitively via tauri; no version churn.
serde_json = "1"
