[package]
name = "photo-diary-core"
version = "0.1.0"
edition = "2021"
description = "Pure logic layer for photo-diary: EXIF reading, folder scanning, thumbnails, AVIF conversion, SQLite. Testable without Tauri."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thiserror = "2"
walkdir = "2"
kamadak-exif = "0.6"
# AVIF encoding goes through image's own `avif` feature (ravif/rav1e, pure Rust). This
# replaces the former direct `ravif` dependency so only one rav1e is compiled (image already
# pulls ravif transitively). The `avif` feature is encode-only (no dav1d/`avif-native`), so
# no NASM/system library is required = reproducibility first.
image = { version = "0.25", features = ["avif"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
# `local-offset` lets us capture the machine's UTC offset at startup so mtime/now fallbacks
# are formatted in local wall-clock time (matching EXIF), not UTC.
time = { version = "0.3", features = ["local-offset"] }

[dev-dependencies]
tempfile = "3"
# Serde-contract tests inspect the exact JSON wire shape (camelCase keys, null representation)
# the TS `PhotoLibrary` port depends on. Already locked transitively; no version churn.
serde_json = "1"
